`ant compile` task now takes the path to the OpenJFX SDK
So that one no longer need to manually insert the OpenJFX jars.